<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/white_colr"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/not_connected"
            android:gravity="center"
            android:id="@+id/txt_status"
            android:padding="8dp"
            android:background="#69f0ae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:layout_below="@id/txt_status"
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />



        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_colorNormal="@color/primary"
            fab:menu_colorPressed="@color/primary_dark"
            fab:menu_colorRipple="@color/white_colr"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_buttonSpacing="0dp"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_textColor="#fff"
            fab:menu_labels_textSize="14sp"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="@android:color/transparent"
            >

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bluetooth_searching_white_24dp"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/primary"
                fab:fab_colorPressed="@color/primary_dark"
                fab:fab_colorRipple="@color/white_colr"
                fab:fab_label="@string/secure_connect" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_search_insecure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bluetooth_searching_white_24dp"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/primary"
                fab:fab_colorPressed="@color/primary_dark"
                fab:fab_colorRipple="@color/white_colr"
                fab:fab_label="@string/insecure_connect" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_remove_red_eye_white_24dp"
                fab:fab_size="mini"
                fab:fab_colorNormal="@color/primary"
                fab:fab_colorPressed="@color/primary_dark"
                fab:fab_colorRipple="@color/white_colr"
                fab:fab_label="@string/discoverable" />

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

    <RelativeLayout

        android:layout_marginTop="1dp"
        android:background="@color/white_colr"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >

        <EditText
            android:layout_toLeftOf="@+id/button_send"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            android:enabled="false"
            android:id="@+id/edit_text_out"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            />

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_send_black_36dp"
            android:enabled="false"
            android:id="@+id/button_send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/send" />
    </RelativeLayout>

</LinearLayout>
